Sonic Code/SonicRPGParser.py
# Generated from SonicRPG.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SonicRPGParser ( Parser ):

    grammarFileName = "SonicRPG.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'position'", "'x'", "'y'", "'boss_unlocked'", 
                     "'game_over'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'>'", "'<'", "'>='", "'<='", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'('", "')'", "'{'", "'}'", "';'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "MOVE", "COLLECT", "USE", 
                      "TOKEN", "FIGHT", "BOSS", "SAY", "IF", "ELSE", "ENDIF", 
                      "LOOP", "ENDLOOP", "EXIT", "SAVE", "LOAD", "INVENTORY", 
                      "WAIT", "LOOK", "STATUS", "MAP", "HELP", "UP", "DOWN", 
                      "LEFT", "RIGHT", "NORTH", "SOUTH", "EAST", "WEST", 
                      "RING", "RINGS", "SPEED", "CHECKPOINT", "GT", "LT", 
                      "GTE", "LTE", "EQ", "NEQ", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "SEMICOLON", "COMMA", "DOT", "NUMBER", "STRING", "IDENTIFIER", 
                      "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_moveStatement = 2
    RULE_direction = 3
    RULE_collectStatement = 4
    RULE_collectTarget = 5
    RULE_useStatement = 6
    RULE_useTarget = 7
    RULE_fightStatement = 8
    RULE_sayStatement = 9
    RULE_ifStatement = 10
    RULE_loopStatement = 11
    RULE_exitStatement = 12
    RULE_saveStatement = 13
    RULE_loadStatement = 14
    RULE_inventoryStatement = 15
    RULE_waitStatement = 16
    RULE_lookStatement = 17
    RULE_statusStatement = 18
    RULE_helpStatement = 19
    RULE_mapStatement = 20
    RULE_expressionStatement = 21
    RULE_condition = 22
    RULE_compareOp = 23
    RULE_expression = 24
    RULE_atom = 25
    RULE_gameProperty = 26

    ruleNames =  [ "program", "statement", "moveStatement", "direction", 
                   "collectStatement", "collectTarget", "useStatement", 
                   "useTarget", "fightStatement", "sayStatement", "ifStatement", 
                   "loopStatement", "exitStatement", "saveStatement", "loadStatement", 
                   "inventoryStatement", "waitStatement", "lookStatement", 
                   "statusStatement", "helpStatement", "mapStatement", "expressionStatement", 
                   "condition", "compareOp", "expression", "atom", "gameProperty" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    MOVE=6
    COLLECT=7
    USE=8
    TOKEN=9
    FIGHT=10
    BOSS=11
    SAY=12
    IF=13
    ELSE=14
    ENDIF=15
    LOOP=16
    ENDLOOP=17
    EXIT=18
    SAVE=19
    LOAD=20
    INVENTORY=21
    WAIT=22
    LOOK=23
    STATUS=24
    MAP=25
    HELP=26
    UP=27
    DOWN=28
    LEFT=29
    RIGHT=30
    NORTH=31
    SOUTH=32
    EAST=33
    WEST=34
    RING=35
    RINGS=36
    SPEED=37
    CHECKPOINT=38
    GT=39
    LT=40
    GTE=41
    LTE=42
    EQ=43
    NEQ=44
    PLUS=45
    MINUS=46
    MULTIPLY=47
    DIVIDE=48
    LPAREN=49
    RPAREN=50
    LBRACE=51
    RBRACE=52
    SEMICOLON=53
    COMMA=54
    DOT=55
    NUMBER=56
    STRING=57
    IDENTIFIER=58
    WS=59
    COMMENT=60
    BLOCK_COMMENT=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SonicRPGParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SonicRPGParser.StatementContext)
            else:
                return self.getTypedRuleContext(SonicRPGParser.StatementContext,i)


        def getRuleIndex(self):
            return SonicRPGParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SonicRPGParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 504966314511382014) != 0):
                self.state = 54
                self.statement()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(SonicRPGParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def moveStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.MoveStatementContext,0)


        def collectStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.CollectStatementContext,0)


        def useStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.UseStatementContext,0)


        def fightStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.FightStatementContext,0)


        def sayStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.SayStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.IfStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.LoopStatementContext,0)


        def exitStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.ExitStatementContext,0)


        def saveStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.SaveStatementContext,0)


        def loadStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.LoadStatementContext,0)


        def inventoryStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.InventoryStatementContext,0)


        def waitStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.WaitStatementContext,0)


        def lookStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.LookStatementContext,0)


        def statusStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.StatusStatementContext,0)


        def helpStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.HelpStatementContext,0)


        def mapStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.MapStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(SonicRPGParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return SonicRPGParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SonicRPGParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.moveStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.collectStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.useStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.fightStatement()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.sayStatement()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 67
                self.ifStatement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.loopStatement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 8)
                self.state = 69
                self.exitStatement()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 9)
                self.state = 70
                self.saveStatement()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 10)
                self.state = 71
                self.loadStatement()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 11)
                self.state = 72
                self.inventoryStatement()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 12)
                self.state = 73
                self.waitStatement()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 13)
                self.state = 74
                self.lookStatement()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 14)
                self.state = 75
                self.statusStatement()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 15)
                self.state = 76
                self.helpStatement()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 16)
                self.state = 77
                self.mapStatement()
                pass
            elif token in [1, 2, 3, 4, 5, 36, 37, 49, 56, 57, 58]:
                self.enterOuterAlt(localctx, 17)
                self.state = 78
                self.expressionStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoveStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOVE(self):
            return self.getToken(SonicRPGParser.MOVE, 0)

        def direction(self):
            return self.getTypedRuleContext(SonicRPGParser.DirectionContext,0)


        def SEMICOLON(self):
            return self.getToken(SonicRPGParser.SEMICOLON, 0)

        def NUMBER(self):
            return self.getToken(SonicRPGParser.NUMBER, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_moveStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoveStatement" ):
                listener.enterMoveStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoveStatement" ):
                listener.exitMoveStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoveStatement" ):
                return visitor.visitMoveStatement(self)
            else:
                return visitor.visitChildren(self)




    def moveStatement(self):

        localctx = SonicRPGParser.MoveStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_moveStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SonicRPGParser.MOVE)
            self.state = 82
            self.direction()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 83
                self.match(SonicRPGParser.NUMBER)


            self.state = 86
            self.match(SonicRPGParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UP(self):
            return self.getToken(SonicRPGParser.UP, 0)

        def DOWN(self):
            return self.getToken(SonicRPGParser.DOWN, 0)

        def LEFT(self):
            return self.getToken(SonicRPGParser.LEFT, 0)

        def RIGHT(self):
            return self.getToken(SonicRPGParser.RIGHT, 0)

        def NORTH(self):
            return self.getToken(SonicRPGParser.NORTH, 0)

        def SOUTH(self):
            return self.getToken(SonicRPGParser.SOUTH, 0)

        def EAST(self):
            return self.getToken(SonicRPGParser.EAST, 0)

        def WEST(self):
            return self.getToken(SonicRPGParser.WEST, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_direction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirection" ):
                listener.enterDirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirection" ):
                listener.exitDirection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDirection" ):
                return visitor.visitDirection(self)
            else:
                return visitor.visitChildren(self)




    def direction(self):

        localctx = SonicRPGParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 34225520640) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CollectStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLLECT(self):
            return self.getToken(SonicRPGParser.COLLECT, 0)

        def collectTarget(self):
            return self.getTypedRuleContext(SonicRPGParser.CollectTargetContext,0)


        def SEMICOLON(self):
            return self.getToken(SonicRPGParser.SEMICOLON, 0)

        def NUMBER(self):
            return self.getToken(SonicRPGParser.NUMBER, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_collectStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCollectStatement" ):
                listener.enterCollectStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCollectStatement" ):
                listener.exitCollectStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCollectStatement" ):
                return visitor.visitCollectStatement(self)
            else:
                return visitor.visitChildren(self)




    def collectStatement(self):

        localctx = SonicRPGParser.CollectStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_collectStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(SonicRPGParser.COLLECT)
            self.state = 91
            self.collectTarget()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 92
                self.match(SonicRPGParser.NUMBER)


            self.state = 95
            self.match(SonicRPGParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CollectTargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RING(self):
            return self.getToken(SonicRPGParser.RING, 0)

        def RINGS(self):
            return self.getToken(SonicRPGParser.RINGS, 0)

        def TOKEN(self):
            return self.getToken(SonicRPGParser.TOKEN, 0)

        def IDENTIFIER(self):
            return self.getToken(SonicRPGParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_collectTarget

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCollectTarget" ):
                listener.enterCollectTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCollectTarget" ):
                listener.exitCollectTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCollectTarget" ):
                return visitor.visitCollectTarget(self)
            else:
                return visitor.visitChildren(self)




    def collectTarget(self):

        localctx = SonicRPGParser.CollectTargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_collectTarget)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 288230479230927360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(SonicRPGParser.USE, 0)

        def useTarget(self):
            return self.getTypedRuleContext(SonicRPGParser.UseTargetContext,0)


        def SEMICOLON(self):
            return self.getToken(SonicRPGParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_useStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseStatement" ):
                listener.enterUseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseStatement" ):
                listener.exitUseStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStatement" ):
                return visitor.visitUseStatement(self)
            else:
                return visitor.visitChildren(self)




    def useStatement(self):

        localctx = SonicRPGParser.UseStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_useStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(SonicRPGParser.USE)
            self.state = 100
            self.useTarget()
            self.state = 101
            self.match(SonicRPGParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseTargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOKEN(self):
            return self.getToken(SonicRPGParser.TOKEN, 0)

        def SPEED(self):
            return self.getToken(SonicRPGParser.SPEED, 0)

        def CHECKPOINT(self):
            return self.getToken(SonicRPGParser.CHECKPOINT, 0)

        def IDENTIFIER(self):
            return self.getToken(SonicRPGParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_useTarget

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseTarget" ):
                listener.enterUseTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseTarget" ):
                listener.exitUseTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseTarget" ):
                return visitor.visitUseTarget(self)
            else:
                return visitor.visitChildren(self)




    def useTarget(self):

        localctx = SonicRPGParser.UseTargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_useTarget)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 288230788468572672) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FightStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIGHT(self):
            return self.getToken(SonicRPGParser.FIGHT, 0)

        def BOSS(self):
            return self.getToken(SonicRPGParser.BOSS, 0)

        def SEMICOLON(self):
            return self.getToken(SonicRPGParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_fightStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFightStatement" ):
                listener.enterFightStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFightStatement" ):
                listener.exitFightStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFightStatement" ):
                return visitor.visitFightStatement(self)
            else:
                return visitor.visitChildren(self)




    def fightStatement(self):

        localctx = SonicRPGParser.FightStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fightStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(SonicRPGParser.FIGHT)
            self.state = 106
            self.match(SonicRPGParser.BOSS)
            self.state = 107
            self.match(SonicRPGParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SayStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SAY(self):
            return self.getToken(SonicRPGParser.SAY, 0)

        def STRING(self):
            return self.getToken(SonicRPGParser.STRING, 0)

        def SEMICOLON(self):
            return self.getToken(SonicRPGParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_sayStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSayStatement" ):
                listener.enterSayStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSayStatement" ):
                listener.exitSayStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSayStatement" ):
                return visitor.visitSayStatement(self)
            else:
                return visitor.visitChildren(self)




    def sayStatement(self):

        localctx = SonicRPGParser.SayStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sayStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(SonicRPGParser.SAY)
            self.state = 110
            self.match(SonicRPGParser.STRING)
            self.state = 111
            self.match(SonicRPGParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SonicRPGParser.IF, 0)

        def LPAREN(self):
            return self.getToken(SonicRPGParser.LPAREN, 0)

        def condition(self):
            return self.getTypedRuleContext(SonicRPGParser.ConditionContext,0)


        def RPAREN(self):
            return self.getToken(SonicRPGParser.RPAREN, 0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(SonicRPGParser.LBRACE)
            else:
                return self.getToken(SonicRPGParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(SonicRPGParser.RBRACE)
            else:
                return self.getToken(SonicRPGParser.RBRACE, i)

        def ENDIF(self):
            return self.getToken(SonicRPGParser.ENDIF, 0)

        def SEMICOLON(self):
            return self.getToken(SonicRPGParser.SEMICOLON, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SonicRPGParser.StatementContext)
            else:
                return self.getTypedRuleContext(SonicRPGParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(SonicRPGParser.ELSE, 0)

        def getRuleIndex(self):
            return SonicRPGParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = SonicRPGParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(SonicRPGParser.IF)
            self.state = 114
            self.match(SonicRPGParser.LPAREN)
            self.state = 115
            self.condition()
            self.state = 116
            self.match(SonicRPGParser.RPAREN)
            self.state = 117
            self.match(SonicRPGParser.LBRACE)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
